--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -24,6 +24,12 @@
 
 .empty {
     background-color: #aaaaaa;
+    font-family: helvetica, arial, sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    vertical-align: middle;
+    color: #3f4fe8;
 }
 
 table {
